--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <i class="fas fa-object-ungroup fa-4x process-icon-my2">
                         <div class="process-step">3</div>
                     </i>
-                    <h3>Amwy business</h3>
+                    <h3> business</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas rem ipsum modi veniam tempore
                         deserunt.</p>
                 </div>
